# app_sdk

./: Cargo.toml  README.md  build.rs  cbindgen.toml
scripts/: ohos-aarch64-clang.sh
src/: ffi.rs  lib.rs  ohos_napi.rs  wasm.rs
uniffi/: app_sdk.udl
