[package]
name = "app_sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_sdk"
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = ["dep:wasm-bindgen"]
ohos = []
uniffi = ["dep:uniffi"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
uniffi = { version = "0.25", optional = true }

[build-dependencies]
uniffi_build = "0.25"

[dev-dependencies]
cbindgen = "0.24"