[package]
name = "app_sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_sdk"
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = ["dep:wasm-bindgen"]
uniffi = ["dep:uniffi"]
ohos_napi = ["dep:napi-ohos", "dep:napi-derive-ohos"]
headers = ["safer-ffi/headers"]

[dependencies]
safer-ffi = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
uniffi = { version = "0.25", optional = true, features = ["cli"] }
napi-ohos = { version = "1", optional = true }
napi-derive-ohos = { version = "1", optional = true }

[build-dependencies]
uniffi_build = "0.25"
napi-build-ohos = "1"

[dev-dependencies]
cbindgen = "0.24"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi"]
